--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -569,7 +569,7 @@ a {
 /*! ----- nav ----- */
 
 .nav {
-  z-index: 3;
+  z-index: 5;
   position: fixed;
   top: 0;
   left: 0;
@@ -2496,11 +2496,11 @@ p.overview__love-stat-timer {
 
 .overview__stickers-tab::before {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -1px;
+  right: -1px;
   display: block;
-  width: 6rem;
-  height: 6rem;
+  width: 8rem;
+  height: 8rem;
   content: '';
   background-color: var(--c60);
   clip-path: polygon(0 0, 100% 0, 100% 100%);
