--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -63,7 +63,7 @@
                 </svg>
                 <span>{{ world_pop }}</span><!--Количество игроков-->
               </li>
-              <li class="ct__view-info-item" onclick="window.location.href = '/region/{{ player.region.pk }}/parties/'">
+              <li class="ct__view-info-item" onclick="window.location.href = '/world/parties/'">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.4311 4C9.4311 4.78951 8.72121 5.5 7.75486 5.5C6.7885 5.5 6.07861 4.78951 6.07861 4C6.07861 3.21049 6.7885 2.5 7.75486 2.5C8.72121 2.5 9.4311 3.21049 9.4311 4Z" stroke="var(--c10two)"/>
                   <path d="M5.07882 4.5C5.07882 5.01337 4.61252 5.5 3.94664 5.5C3.28076 5.5 2.81445 5.01337 2.81445 4.5C2.81445 3.98663 3.28076 3.5 3.94664 3.5C4.61252 3.5 5.07882 3.98663 5.07882 4.5Z" stroke="var(--c10two)"/>
@@ -103,7 +103,7 @@
           </div>
           <!--Блок ГОСУДАРСТВО-->
           <div class="overview__view-info ct__view-info">
-            <h2 {% if player.region.state %}onclick="window.location.href = 'state/{{ player.region.state.pk }}/'"{% endif %}>{% if player.region.state %}{{ player.region.state.title }}{% else %}независимый регион{% endif %}</h2>
+            <h2>{% if player.region.state %}{{ player.region.state.title }}{% else %}независимый регион{% endif %}</h2>
             <ul class="ct__view-info-list">
               <li class="ct__view-info-item">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +119,7 @@
                 </svg>
                 <span>{{ state_online }}</span><!--Количество игроков online-->
               </li>
-              <li class="ct__view-info-item">
+              <li class="ct__view-info-item" onclick="window.location.href = '/{% if player.region.state %}state/{{ player.region.state.pk }}{% else %}region/{{ player.region.pk }}{% endif %}/parties/'">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.4311 4C9.4311 4.78951 8.72121 5.5 7.75486 5.5C6.7885 5.5 6.07861 4.78951 6.07861 4C6.07861 3.21049 6.7885 2.5 7.75486 2.5C8.72121 2.5 9.4311 3.21049 9.4311 4Z" stroke="var(--c10two)"/>
                   <path d="M5.07882 4.5C5.07882 5.01337 4.61252 5.5 3.94664 5.5C3.28076 5.5 2.81445 5.01337 2.81445 4.5C2.81445 3.98663 3.28076 3.5 3.94664 3.5C4.61252 3.5 5.07882 3.98663 5.07882 4.5Z" stroke="var(--c10two)"/>
@@ -134,10 +134,10 @@
             {% if player.region.state %}
                 {% if player.region.state.image %}
                 <!--Картинка слева - герб-->
-                <img class="ct__view-info-image" src="{{ player.region.state.image.url }}" alt="{{ player.region.state.title }}">
+                <img class="ct__view-info-image" src="{{ player.region.state.image.url }}" alt="{{ player.region.state.title }}" onclick="window.location.href = 'state/{{ player.region.state.pk }}/'">
                 {% else %}
                 <!--SVG картинка слева заглушка государства-->
-                <svg class="ct__view-info-image" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="ct__view-info-image" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="window.location.href = 'state/{{ player.region.state.pk }}/'">
                   <g clip-path="url(#clip0_719_1078)">
                   <path d="M0.491699 16.9875C0.491699 7.87313 7.87737 0.487457 16.9917 0.487457C26.106 0.487457 33.4917 7.87313 33.4917 16.9875C33.4917 26.1018 26.106 33.4875 16.9917 33.4875C7.87737 33.4875 0.491699 26.1018 0.491699 16.9875Z" stroke="var(--c10two)"/>
                   <path d="M16.2592 1.71561V4.40533C16.3253 4.37682 16.4058 4.35403 16.4954 4.33842C16.5851 4.32281 16.682 4.31471 16.78 4.31464C16.9631 4.31477 17.139 4.34291 17.2706 4.39314V1.71561H16.2592ZM16.7436 5.35272C16.4899 5.35298 16.2407 5.39844 16.021 5.48455C15.8013 5.57067 15.6188 5.69442 15.4919 5.84342V6.7694C15.6339 6.71639 15.8231 6.67309 16.0432 6.64318C16.2634 6.61328 16.5081 6.59764 16.7565 6.59762C17.0082 6.59768 17.256 6.61377 17.4783 6.64448C17.7006 6.6752 17.8907 6.7196 18.0319 6.77381H18.0374C18.0402 6.76963 18.0429 6.76543 18.0456 6.76123V5.90751C17.9273 5.74146 17.7424 5.60137 17.5121 5.50326C17.2819 5.40514 17.0156 5.35297 16.7436 5.35272ZM16.7316 7.62156C16.5306 7.62348 15.664 7.66601 14.6557 8.22305C13.672 8.76649 13.127 9.41527 13.127 9.41527C13.127 9.41527 12.3711 10.1942 11.711 11.5801C11.2055 12.6412 11.0306 13.745 11.0306 13.745H22.5204C22.5204 13.745 22.3793 12.8269 21.8114 11.5801C21.2372 10.3191 20.4003 9.41527 20.4003 9.41527C20.4003 9.41527 19.489 8.51052 18.8184 8.14612C17.8005 7.59306 16.7754 7.62182 16.7754 7.62182C16.7754 7.62182 16.7603 7.62129 16.7316 7.62156ZM9.92453 14.7933L9.50676 15.6916H9.92453H23.607H24.0247L23.607 14.7933H9.92453ZM9.9837 16.7013V18.2707H10.9826V16.7013H9.9837ZM13.1217 16.7013V18.2707H14.1206V16.7013H13.1217ZM16.2597 16.7013V18.2707H17.2586V16.7013H16.2597ZM19.3977 16.7013V18.2707H20.3966V16.7013H19.3977ZM22.5489 16.7013V18.2707H23.5478V16.7013H22.5489ZM7.37247 19.2717V20.1909H26.1577V19.2717H7.37247ZM8.17779 21.1937V24.5541H9.18564V21.1937H8.17779ZM10.873 21.1937V24.5541H11.8808V21.1937H10.873ZM13.5549 21.1937V24.5541H14.5626V21.1937H13.5549ZM16.2501 21.1937V24.5541H17.2578V21.1937H16.2501ZM18.9451 21.1937V24.5541H19.953V21.1937H18.9451ZM21.6403 21.1937V24.5541H22.6482V21.1937H21.6403ZM24.3355 21.1937V24.5541H25.3433V21.1937H24.3355ZM4.69922 25.5657V27.2415H28.8281V25.5657H4.69922Z" fill="var(--c10one)"/>
@@ -151,7 +151,7 @@
                 {% endif %}
             {% else %}
             <!--SVG картинка флага-->
-            <svg class="ct__view-info-image" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="window.location.href = 'state/{{ player.region.state.pk }}/'">
+            <svg class="ct__view-info-image" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M4.0083 19.9797C5.79935 15.9581 6.90009 11.8186 7.22658 10.2516C9.12957 11.108 11.3777 11.7255 12.2639 11.9272C14.6893 12.672 16.5394 11.1204 17.1613 10.2516C18.5046 8.20354 19.9909 7.31917 20.5661 7.13299C22.8796 6.61167 26.1632 7.90876 27.5158 8.62246C23.1874 11.1546 23.1003 16.1009 23.5979 18.2575C20.4262 16.1722 17.3634 16.5508 16.2284 17.0007C14.027 18.0434 13.0102 19.4211 12.777 19.9797C12.0307 21.7298 9.60532 21.826 8.48591 21.6553C6.5083 21.3574 4.67683 20.4141 4.0083 19.9797Z" fill="var(--c10one)"/>
               <path d="M18.1408 33.0126L27.9822 8.34319C28.5792 7.71017 28.915 8.26561 29.0083 8.62246L19.4001 33.0126H18.1408Z" fill="var(--c10one)"/>
               <path d="M0.5 17C0.5 7.88567 7.88567 0.5 17 0.5C26.1143 0.5 33.5 7.88567 33.5 17C33.5 26.1143 26.1143 33.5 17 33.5C7.88567 33.5 0.5 26.1143 0.5 17Z" stroke="var(--c10two)"/>
@@ -176,7 +176,7 @@
                 </svg>
                 <span>{{ region_online }}</span><!--Количество игроков online-->
               </li>
-              <li class="ct__view-info-item">
+              <li class="ct__view-info-item" onclick="window.location.href = '/region/{{ player.region.pk }}/parties/'">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.4311 4C9.4311 4.78951 8.72121 5.5 7.75486 5.5C6.7885 5.5 6.07861 4.78951 6.07861 4C6.07861 3.21049 6.7885 2.5 7.75486 2.5C8.72121 2.5 9.4311 3.21049 9.4311 4Z" stroke="var(--c10two)"/>
                   <path d="M5.07882 4.5C5.07882 5.01337 4.61252 5.5 3.94664 5.5C3.28076 5.5 2.81445 5.01337 2.81445 4.5C2.81445 3.98663 3.28076 3.5 3.94664 3.5C4.61252 3.5 5.07882 3.98663 5.07882 4.5Z" stroke="var(--c10two)"/>
@@ -189,7 +189,7 @@
               </li>
             </ul>
             <!--Картинка слева - герб-->
-            <img class="ct__view-info-image" src="/static/img/regions/{{ player.region.on_map_id }}.png" alt="{{ player.region.region_name }}">
+            <img class="ct__view-info-image" src="/static/img/regions/{{ player.region.on_map_id }}.png" alt="{{ player.region.region_name }}" onclick="window.location.href = '/region/{{ player.region.pk }}/'">
           </div>
           <!--Блок ВОЙНА-->
 <!--          <a href="##" class="overview__war">-->
