выделение Силы в скиллах

--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -15,7 +15,7 @@
   </svg>
 </button>
 <!--сила-->
-<div class="overview__love-stat-content active">
+<div class="overview__love-stat-content">
   <h2>Сила</h2>
   <div style="background-color: tomato;"></div>
   {% if train and train.skill == 'power' %}
