ошибка при создании склада в редизайне

--- a/storage/templates/storage/redesign/storage_blocks/no_storage.html
+++ b/storage/templates/storage/redesign/storage_blocks/no_storage.html
@@ -18,7 +18,7 @@
             <label class="store__noselect">
                 <select name="storage">
                 {% for storage in storages %}
-                    <option {% if forloop.first %}selected{% endif %} value='{{ storage.pk }}'>{{ storage.region }}{% if not materials_exists|dict_key:storage %} - нехватка материалов!{% else %} - доставка ${{delivery_sum|dict_key:storage }}{% endif %}
+                    <option {% if forloop.first %}selected{% endif %} value='{% localize off %}{{ storage.pk }}{% endlocalize %}'>{{ storage.region }}{% if not materials_exists|dict_key:storage %} - нехватка материалов!{% else %} - доставка ${{delivery_sum|dict_key:storage }}{% endif %}
                     </option>
                 {% endfor %}
                 </select>
