теги локали в редизайне

--- a/storage/templates/storage/redesign/storage_blocks/no_storage.html
+++ b/storage/templates/storage/redesign/storage_blocks/no_storage.html
@@ -1,5 +1,6 @@
 {% load dict_key %}
 {% load static %}
+{% load l10n %}{% load i18n %}
 <div class="store__left">
     <!--БЛОК когда нет склада-->
     <div class="store__nostore">
