убрана активность навыка силы по умолчанию?

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -256,7 +256,7 @@
         <div class="overview__love">
           <!--Левая колонка-->
           <div class="overview__love-left">
-            <button class="overview__love-stat-btn active" onclick="setStatTab(0)">
+            <button class="overview__love-stat-btn" onclick="setStatTab(0)">
               <h3>сила</h3>
               <div style="background-color: tomato;" class="overview__love-stat-btn-line"></div>
               <span>{{ player.power }}</span>
